[gd_scene load_steps=9 format=2]

[ext_resource path="res://visual/gui/pompy_ui.tres" type="Theme" id=1]
[ext_resource path="res://physics/1d/room/title_screen.gd" type="Script" id=2]
[ext_resource path="res://visual/font/pompy_sans_24.tres" type="DynamicFont" id=3]
[ext_resource path="res://audio/music/theme_part3.ogg" type="AudioStream" id=4]
[ext_resource path="res://visual/background/background_splash.png" type="Texture" id=5]
[ext_resource path="res://audio/effects/mouse_click.wav" type="AudioStream" id=6]
[ext_resource path="res://physics/1d/tool/transition.tscn" type="PackedScene" id=9]

[sub_resource type="Animation" id=1]
resource_name = "fade_in"
length = 1.5
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("TitleBox/Title:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1, 1.5 ),
"transitions": PoolRealArray( 0.65, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TitleBox:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
next_scene = "res://physics/1d/intro.tscn"

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0313726, 0.0784314, 0.117647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fade_in"
anims/fade_in = SubResource( 1 )

[node name="TitleBox" type="VBoxContainer" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 256.0
margin_top = 89.0
margin_right = 421.0
margin_bottom = 257.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="TitleBox"]
margin_right = 225.0
margin_bottom = 48.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.964706, 0.839216, 0.741176, 1 )
text = "Space Cake v.2"
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveName" type="Label" parent="TitleBox"]
margin_top = 52.0
margin_right = 225.0
margin_bottom = 68.0

[node name="Start" type="Button" parent="TitleBox"]
margin_top = 72.0
margin_right = 225.0
margin_bottom = 92.0
text = "Start playing"

[node name="Credits" type="HBoxContainer" parent="TitleBox"]
margin_top = 96.0
margin_right = 225.0
margin_bottom = 131.0
size_flags_vertical = 9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TitleBox/Credits"]
margin_right = 93.0
margin_bottom = 35.0
text = "Programming & Design:
HowYouDoing"

[node name="Control" type="Control" parent="TitleBox/Credits"]
margin_left = 97.0
margin_right = 111.0
margin_bottom = 35.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="TitleBox/Credits"]
margin_left = 115.0
margin_right = 141.0
margin_bottom = 35.0
text = "Art:
Pompy"

[node name="Control2" type="Control" parent="TitleBox/Credits"]
margin_left = 145.0
margin_right = 160.0
margin_bottom = 35.0
size_flags_horizontal = 3

[node name="Label3" type="Label" parent="TitleBox/Credits"]
margin_left = 164.0
margin_right = 225.0
margin_bottom = 35.0
text = "Music & Sound:
Travis Sullivan"

[node name="Label" type="Label" parent="TitleBox"]
margin_top = 135.0
margin_right = 225.0
margin_bottom = 170.0
text = "tools:
Godot Engine & Github"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="Start" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Transition" parent="." instance=ExtResource( 9 )]
visible = false
next_scene = "res://physics/1d/room/intermesso.tscn"
fade_out = true

[connection signal="ready" from="." to="." method="_on_TitleScreen_ready"]
[connection signal="pressed" from="TitleBox/Start" to="." method="_on_Start_pressed"]
